spacing fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -289,26 +289,26 @@ footer {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  height: 500px;
+  height: 315px;
 }
 
 .marksheets-title {
   font-size: 30px;
   color: #333;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-weight: bold;
   text-align: center;
 }
 
 .marksheets-article {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .marksheets-subtitle {
   font-size: 22px;
   color: #555;
-  margin-bottom: 50px;
-  margin-top: 115px;
+  margin-bottom: 30px;
+  margin-top: 60px;
 }
 
 .marksheets-button {
